--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,6 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +19,108 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+.header {
+  padding: 20px 0;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 40px;
+}
+
+.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: #747bff;
+}
+
+.gallery {
+    max-width: 1128px;
+    list-style-type: none;
+    margin: auto;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding-top: 50px;
+}
+
+.gallery-item {
+    width: calc((100% - 48px) / 3);
+}
+.gallery-item img:hover,
+.gallery-item img:focus {
+    scale: 1.05;
+}
+
+
+.feedback-form {
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+}
+.feedback-form input {
+    display: block;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    color: #808080;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid #808080;
+}
+
+.feedback-form input:focus{
+    border-color: #000;
+}
+.feedback-form textarea {
+    width: 100%;
+    height: 80px;
+    display: block;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid #808080;
+    margin-top: 8px;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+.feedback-form textarea:focus{
+    border-color: #000;
+}
+.feedback-form label {
+    display: block;
+    color: #2e2f42;
+}
+
+.feedback-form button {
+    width: 95px;
+    height: 40px;
+    border-radius: 8px;
+    background: #4e75ff;
+    color: #fff;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.64px;
+    border: none;
+}
+
+.feedback-form button:hover,
+.feedback-form button:focus{
+    background-color: #6C8CFF;
 }
